--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -51,7 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
