--- a/WebFormsUI/Web.config
+++ b/WebFormsUI/Web.config
@@ -26,4 +26,7 @@
 	<connectionStrings>
 		<add name="DatabaseContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;initial catalog=SiparisAlmaProgrami;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+    <appSettings>
+        <add key="ValidationSettings:UnobtrusiveValidationMode" value="none" />
+	</appSettings>
 </configuration>
