--- a/WebFormsUI/WebFormsUI.csproj
+++ b/WebFormsUI/WebFormsUI.csproj
@@ -78,6 +78,7 @@
     <Content Include="Global.asax" />
     <Content Include="ProductManagement.aspx" />
     <Content Include="Stil.css" />
+    <Content Include="UserManagement.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +128,13 @@
       <DependentUpon>ProductManagement.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManagement.aspx.cs">
+      <DependentUpon>UserManagement.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserManagement.aspx.designer.cs">
+      <DependentUpon>UserManagement.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="AnaEkran.Master" />
