--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CategoryManager.cs" />
     <Compile Include="CustomerManager.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="LoginManager.cs" />
     <Compile Include="ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
