--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CustomerManager.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="LoginManager.cs" />
+    <Compile Include="LogManager.cs" />
     <Compile Include="ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
