--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Category.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="IEntity.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
