--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="AddressManager.cs" />
     <Compile Include="CategoryManager.cs" />
+    <Compile Include="ContactManager.cs" />
     <Compile Include="CustomerManager.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="LoginManager.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
+    <Compile Include="SliderManager.cs" />
     <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
