--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -44,11 +44,13 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="Contact.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slider.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
