--- a/MVCUI/Web.config
+++ b/MVCUI/Web.config
@@ -10,6 +10,9 @@
     </configSections>
     <connectionStrings>
         <add name="DatabaseContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;initial catalog=SiparisAlmaProgrami;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+        <!--Bilgisayarda geliştirme yaparken yukardaki DatabaseContext connectionString ini
+        Uygulamayı hostinge yüklemeden önce aşağıdaki connection stringi yayına almalıyız
+        <add name="DatabaseContext" connectionString="data source=95.84.18.34;initial catalog=SiparisAlmaProgrami; User Id=myUsername; Password=myPassword; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
     </connectionStrings>
     <appSettings>
         <add key="webpages:Version" value="3.0.0.0" />
