ProductManager a özel sorgu ve Dto işlemi eklendi, paketler güncellendi

--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Category.cs" />
     <Compile Include="Contact.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="DTOs\ProductListDto.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Product.cs" />
